# espeak-ng-rs

./: BENCHMARK.md  Cargo.toml  PUBLISHING.md  README.md  build.rs
.github/workflows/: ci.yml
benches/: bench.sh  vs_c.rs
data-crates/espeak-ng-data-dict-af/: Cargo.toml
data-crates/espeak-ng-data-dict-am/: Cargo.toml
data-crates/espeak-ng-data-dict-am/src/: lib.rs
data-crates/espeak-ng-data-dict-an/: Cargo.toml
data-crates/espeak-ng-data-dict-an/src/: lib.rs
data-crates/espeak-ng-data-dict-ar/: Cargo.toml
data-crates/espeak-ng-data-dict-ar/src/: lib.rs
data-crates/espeak-ng-data-dict-as/: Cargo.toml
data-crates/espeak-ng-data-dict-as/src/: lib.rs
data-crates/espeak-ng-data-dict-az/: Cargo.toml
data-crates/espeak-ng-data-dict-az/src/: lib.rs
data-crates/espeak-ng-data-dict-ba/: Cargo.toml
data-crates/espeak-ng-data-dict-be/: Cargo.toml
data-crates/espeak-ng-data-dict-be/src/: lib.rs
data-crates/espeak-ng-data-dict-bg/: Cargo.toml
data-crates/espeak-ng-data-dict-bg/src/: lib.rs
data-crates/espeak-ng-data-dict-bn/: Cargo.toml
data-crates/espeak-ng-data-dict-bn/src/: lib.rs
data-crates/espeak-ng-data-dict-bpy/: Cargo.toml
data-crates/espeak-ng-data-dict-bpy/src/: lib.rs
data-crates/espeak-ng-data-dict-bs/: Cargo.toml
data-crates/espeak-ng-data-dict-bs/src/: lib.rs
data-crates/espeak-ng-data-dict-ca/: Cargo.toml
data-crates/espeak-ng-data-dict-chr/: Cargo.toml
data-crates/espeak-ng-data-dict-chr/src/: lib.rs
data-crates/espeak-ng-data-dict-cmn/: Cargo.toml
data-crates/espeak-ng-data-dict-cmn/src/: lib.rs
data-crates/espeak-ng-data-dict-cs/: Cargo.toml
data-crates/espeak-ng-data-dict-cs/src/: lib.rs
data-crates/espeak-ng-data-dict-cv/: Cargo.toml
data-crates/espeak-ng-data-dict-cv/src/: lib.rs
data-crates/espeak-ng-data-dict-cy/: Cargo.toml
data-crates/espeak-ng-data-dict-da/: Cargo.toml
data-crates/espeak-ng-data-dict-da/src/: lib.rs
data-crates/espeak-ng-data-dict-de/: Cargo.toml
data-crates/espeak-ng-data-dict-de/src/: lib.rs
data-crates/espeak-ng-data-dict-el/: Cargo.toml
data-crates/espeak-ng-data-dict-el/src/: lib.rs
data-crates/espeak-ng-data-dict-en/: Cargo.toml
data-crates/espeak-ng-data-dict-en/src/: lib.rs
data-crates/espeak-ng-data-dict-eo/: Cargo.toml
data-crates/espeak-ng-data-dict-eo/src/: lib.rs
data-crates/espeak-ng-data-dict-es/: Cargo.toml
data-crates/espeak-ng-data-dict-et/: Cargo.toml
data-crates/espeak-ng-data-dict-et/src/: lib.rs
data-crates/espeak-ng-data-dict-eu/: Cargo.toml
data-crates/espeak-ng-data-dict-eu/src/: lib.rs
data-crates/espeak-ng-data-dict-fa/: Cargo.toml
data-crates/espeak-ng-data-dict-fa/src/: lib.rs
data-crates/espeak-ng-data-dict-fi/: Cargo.toml
data-crates/espeak-ng-data-dict-fi/src/: lib.rs
data-crates/espeak-ng-data-dict-fr/: Cargo.toml
data-crates/espeak-ng-data-dict-fr/src/: lib.rs
data-crates/espeak-ng-data-dict-ga/: Cargo.toml
data-crates/espeak-ng-data-dict-gd/: Cargo.toml
data-crates/espeak-ng-data-dict-gd/src/: lib.rs
data-crates/espeak-ng-data-dict-gn/: Cargo.toml
data-crates/espeak-ng-data-dict-gn/src/: lib.rs
data-crates/espeak-ng-data-dict-grc/: Cargo.toml
data-crates/espeak-ng-data-dict-gu/: Cargo.toml
data-crates/espeak-ng-data-dict-gu/src/: lib.rs
data-crates/espeak-ng-data-dict-hak/: Cargo.toml
data-crates/espeak-ng-data-dict-hak/src/: lib.rs
data-crates/espeak-ng-data-dict-haw/: Cargo.toml
data-crates/espeak-ng-data-dict-haw/src/: lib.rs
data-crates/espeak-ng-data-dict-he/: Cargo.toml
data-crates/espeak-ng-data-dict-hi/: Cargo.toml
data-crates/espeak-ng-data-dict-hr/: Cargo.toml
data-crates/espeak-ng-data-dict-ht/: Cargo.toml
data-crates/espeak-ng-data-dict-hu/: Cargo.toml
data-crates/espeak-ng-data-dict-hy/: Cargo.toml
data-crates/espeak-ng-data-dict-ia/: Cargo.toml
data-crates/espeak-ng-data-dict-id/: Cargo.toml
data-crates/espeak-ng-data-dict-io/: Cargo.toml
data-crates/espeak-ng-data-dict-is/: Cargo.toml
data-crates/espeak-ng-data-dict-it/: Cargo.toml
data-crates/espeak-ng-data-dict-ja/: Cargo.toml
data-crates/espeak-ng-data-dict-jbo/: Cargo.toml
data-crates/espeak-ng-data-dict-ka/: Cargo.toml
data-crates/espeak-ng-data-dict-kk/: Cargo.toml
data-crates/espeak-ng-data-dict-kl/: Cargo.toml
data-crates/espeak-ng-data-dict-kn/: Cargo.toml
data-crates/espeak-ng-data-dict-ko/: Cargo.toml
data-crates/espeak-ng-data-dict-kok/: Cargo.toml  build.rs
data-crates/espeak-ng-data-dict-ku/: Cargo.toml
data-crates/espeak-ng-data-dict-ky/: Cargo.toml
data-crates/espeak-ng-data-dict-la/: Cargo.toml
data-crates/espeak-ng-data-dict-lb/: Cargo.toml
data-crates/espeak-ng-data-dict-lfn/: Cargo.toml
data-crates/espeak-ng-data-dict-lt/: Cargo.toml
data-crates/espeak-ng-data-dict-lv/: Cargo.toml
data-crates/espeak-ng-data-dict-mi/: Cargo.toml
data-crates/espeak-ng-data-dict-mk/: Cargo.toml
data-crates/espeak-ng-data-dict-ml/: Cargo.toml
data-crates/espeak-ng-data-dict-mr/: Cargo.toml
data-crates/espeak-ng-data-dict-ms/: Cargo.toml
data-crates/espeak-ng-data-dict-mt/: Cargo.toml
data-crates/espeak-ng-data-dict-mto/: Cargo.toml
data-crates/espeak-ng-data-dict-my/: Cargo.toml
data-crates/espeak-ng-data-dict-nci/: Cargo.toml
data-crates/espeak-ng-data-dict-ne/: Cargo.toml
espeak-ng-data/: fa_dict  shn_dict  th_dict
examples/: analyze_output.rs  bundled_data_demo.rs  bundled_data_selective_demo.rs  debug_ah.rs  debug_frames.rs  debug_phonemes.rs  debug_program.rs  debug_ru.rs  debug_ru10.rs  debug_ru11.rs  debug_ru12.rs  debug_ru13.rs  debug_ru14.rs  debug_ru2.rs  debug_ru3.rs  debug_ru4.rs  debug_ru5.rs  debug_ru6.rs  debug_ru7.rs  debug_ru8.rs  debug_ru9.rs  debug_synth.rs  debug_wavegen.rs  gen_ru_ipa.rs  parity_check.rs  parity_detailed.rs  pcm_stats.rs  phoneme_inspect.rs
scripts/: generate_dict_crates.py  publish_all_crates.py
src/: bundled_data_generated.rs  engine.rs  error.rs  lib.rs
src/oracle/: mod.rs
tests/: bundled_data_selective.rs  dictionary_integration.rs  encoding_integration.rs  oracle_comparison.rs  synthesis_integration.rs
(+297 files in other folders)
