[package]
name        = "espeak-ng-data-dict-am"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for am_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "am", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/am_dict",
]
