[package]
name        = "espeak-ng-data-dict-an"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for an_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "an", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/an_dict",
]
