[package]
name        = "espeak-ng-data-dict-ar"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for ar_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "ar", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/ar_dict",
]
