[package]
name        = "espeak-ng-data-dict-as"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for as_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "as", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/as_dict",
]
