[package]
name        = "espeak-ng-data-dict-az"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for az_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "az", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/az_dict",
]
