[package]
name        = "espeak-ng-data-dict-be"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for be_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "be", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/be_dict",
]
