[package]
name        = "espeak-ng-data-dict-bg"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for bg_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "bg", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/bg_dict",
]
