[package]
name        = "espeak-ng-data-dict-bn"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for bn_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "bn", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/bn_dict",
]
