[package]
name        = "espeak-ng-data-dict-bs"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for bs_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "bs", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/bs_dict",
]
