[package]
name        = "espeak-ng-data-dict-chr"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for chr_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "chr", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/chr_dict",
]
