[package]
name        = "espeak-ng-data-dict-cs"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for cs_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "cs", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/cs_dict",
]
