[package]
name        = "espeak-ng-data-dict-da"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for da_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "da", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/da_dict",
]
