[package]
name        = "espeak-ng-data-dict-de"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for de_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "de", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/de_dict",
]
