[package]
name        = "espeak-ng-data-dict-el"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for el_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "el", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/el_dict",
]
