[package]
name        = "espeak-ng-data-dict-en"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for en_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "en", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/en_dict",
]
