[package]
name        = "espeak-ng-data-dict-et"
version     = "0.1.0"
edition     = "2021"
description = "eSpeak NG dictionary data for et_dict"
license     = "GPL-3.0-or-later"
keywords    = ["espeak", "tts", "et", "dictionary", "data"]
categories  = ["multimedia::audio", "accessibility"]

include = [
    "build.rs",
    "src/**",
    "data/et_dict",
]
